# spider

./: .bash_history  .gitignore  README.md  homelab_inventory.md  list_structure.py  mcp_config.json  pyproject.toml  requirements.txt  spider_improvements.md  test_spider.sh
.ssh/: id_rsa  id_rsa.pub  known_hosts  known_hosts.old
config/: spider_config.yml
data/: knowledge.db  spider_knowledge.db
docker/: README.md
docs/: README.md  homelab_inventory.md  spider_improvements.md
logs/reports/: analysis_20250819_234259.md  analysis_20250819_234440.md  llm_analysis_20250819_121506.md  llm_analysis_20250819_122326.md
logs/snapshots/: local_scan_20250819_121007.json  local_scan_20250819_124006.json  local_scan_20250819_131006.json  local_scan_20250819_134006.json  local_scan_20250819_141006.json  local_scan_20250819_142949.json  local_scan_20250819_145949.json  local_scan_20250819_152949.json  local_scan_20250819_162547.json  local_scan_20250819_163046.json  local_scan_20250819_163118.json  local_scan_20250819_225145.json  local_scan_20250819_232145.json  local_scan_20250819_234251.json  local_scan_20250819_235145.json  local_scan_20250820_002145.json  local_scan_20250820_005145.json  local_scan_20250820_012145.json  local_scan_20250820_015145.json  local_scan_20250820_022145.json  local_scan_20250820_025145.json  local_scan_20250820_032145.json  local_scan_20250820_035145.json  local_scan_20250820_042145.json  (+876 more)
scripts/: README.md  scan.sh  test_spider.sh
spider/: knowledge_graph_storage.py  main.py  pyproject.toml  readme.md  real-time_file_monitor.py
(+25 files in other folders)
